[package]
name = "spatial-hasher"
version = "0.1.0"
edition = "2021"
description = "A Rust library for deterministic encryption using 3D spatial parameters."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Wolfenheimm/Spatial-Hasher"
keywords = ["encryption", "hashing", "3D", "rust"]
categories = ["cryptography", "data-structures"]

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
