[package]
name = "spatial-hasher"
version = "0.1.5"
edition = "2021"
description = "A Rust library for deterministic encryption and decryption using 3D spatial parameters with secure authenticated encryption."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Wolfenheimm/Spatial-Hasher"
keywords = ["encryption", "hashing", "3D", "rust"]
categories = ["cryptography", "data-structures"]

[dependencies]
chacha20poly1305 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
